This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: test_parser crashes when run after some other tests
Type: crash Stage: needs patch
Components: Distutils, Tests Versions: Python 3.1, Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: amaury.forgeotdarc, pitrou, tarek
Priority: normal Keywords: patch

Created on 2009-05-04 00:01 by pitrou, last changed 2022-04-11 14:56 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
parser.patch amaury.forgeotdarc, 2009-05-07 09:10
Messages (5)
msg87087 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2009-05-04 00:01
This happens sometimes here on trunk, in non-debug mode:

$ ./python -m test.regrtest test_distutils test_parser
Could not find '/home/antoine/cpython/__svn__/Lib/test' in sys.path to
remove it
test_distutils
0 blocks
find:
`/home/antoine/tmp/tmpngdCYU/foo/build/bdist.linux-x86_64/rpm/BUILDROOT/foo-0.1-1.x86_64/usr/lib/debug':
Aucun fichier ou dossier de ce type
0 blocks
find:
`/home/antoine/tmp/tmp431p68/foo/build/bdist.linux-x86_64/rpm/BUILDROOT/foo-0.1-1.x86_64/usr/lib/debug':
Aucun fichier ou dossier de ce type
test_parser
Erreur de segmentation (core dumped)


Perhaps test_distutils sets something up which makes Python import the
wrong version of the "parser" module.
msg87089 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2009-05-04 00:14
Sorry, it also fails with "./python -m test.regrtest test_os
test_parser", so it's not caused by test_distutils.
msg87363 - (view) Author: Amaury Forgeot d'Arc (amaury.forgeotdarc) * (Python committer) Date: 2009-05-07 09:10
It's actually an array bounds read error in parsermodule.c::validate_try.
Purify detects it, if you disable pymalloc; distutils is innocent. 

Patch attached.
msg87448 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2009-05-08 16:33
Great! The patch seems to fix it (although it's difficult to say for
sure since the crashes were intermittent). I apologize for incriminating
distutils.
msg87770 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2009-05-14 21:55
I've committed the patch, thanks!
History
Date User Action Args
2022-04-11 14:56:48adminsetgithub: 50168
2009-05-14 21:55:35pitrousetstatus: open -> closed
resolution: fixed
messages: + msg87770
2009-05-08 16:33:26pitrousetmessages: + msg87448
2009-05-07 09:10:30amaury.forgeotdarcsetfiles: + parser.patch

nosy: + amaury.forgeotdarc
messages: + msg87363

keywords: + patch
2009-05-04 00:14:09pitrousetassignee: tarek ->
messages: + msg87089
title: test_parser crashes when run after test_distutils -> test_parser crashes when run after some other tests
2009-05-04 00:01:13pitroucreate