Issue #5918: Fix a crash in the parser module.

Patch by Amaury.